--- a/package.json
+++ b/package.json
@@ -1,3 +1,10 @@
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+}
 {
   "name": "web-app",
   "type": "module",
